<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            android:id="@+id/toolbar_character_detail">

    </androidx.appcompat.widget.Toolbar>

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/photo"
            android:contentDescription="@string/character_image_content_descrition"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="centerCrop"/>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            card_view:cardCornerRadius="4dp"
            app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">


            <TextView
                    android:text="@string/about_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/about_me"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

            <TextView
                    android:text="@string/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/status"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/about_me"
                    app:layout_constraintStart_toStartOf="@+id/about_me"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

            <TextView
                    android:text="@string/my_origin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/origin"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/status"
                    app:layout_constraintStart_toStartOf="@+id/about_me"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

            <TextView
                    android:text="@string/my_species"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/species"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/origin"
                    app:layout_constraintStart_toStartOf="@+id/about_me"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

            <TextView
                    android:text="@string/my_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gender"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/species"
                    app:layout_constraintStart_toStartOf="@+id/about_me"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

            <TextView
                    android:text="@string/last_seen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/seen"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/gender"
                    app:layout_constraintStart_toStartOf="@+id/about_me"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

            <TextView
                    tools:text="TextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/status_text"
                    app:layout_constraintStart_toEndOf="@+id/status"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/status"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textAllCaps="false"/>

            <TextView
                    tools:text="TextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/origin_text"
                    app:layout_constraintStart_toEndOf="@+id/origin"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/origin"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"/>

            <TextView
                    tools:text="TextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/species_text"
                    app:layout_constraintStart_toEndOf="@+id/species"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/species"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"/>

            <TextView
                    tools:text="TextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/gender_text"
                    app:layout_constraintBottom_toBottomOf="@+id/gender"
                    app:layout_constraintStart_toEndOf="@+id/gender"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"/>

            <TextView
                    tools:text="TextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/seen_text"
                    app:layout_constraintBottom_toBottomOf="@+id/seen"
                    app:layout_constraintStart_toEndOf="@+id/seen"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
</androidx.core.widget.NestedScrollView>